# shinobu-bot-hs

./: .gitignore  cabal.project  flake.nix  fourmolu.yaml  notes.md  readme.md  shinobu-bot.cabal
.github/workflows/: build.yaml
scripts/: add-src-repo-cabal  cabal-update-nix-hashes  cachix-push
sql/: queries.sql  schema.sql
src/: Main.hs  Prelude.hs
src/Shinobu/: Checks.hs  DB.hs  Gacha.hs  KeyStoreCommands.hs  Parsers.hs  Types.hs  Util.hs
src/Shinobu/Commands/: BannedPatterns.hs  CallNotification.hs  CustomReactions.hs  ErrorHandling.hs  Misc.hs  Purge.hs  RemoteSQL.hs  Shop.hs
src/Shinobu/Effects/: Cache.hs  CachedIO.hs  CachedState.hs  Cooldown.hs  DB.hs  IndexStore.hs  KeyStore.hs  UserError.hs
src/Shinobu/Gacha/: Character.hs  DB.hs  Economy.hs  Embeds.hs  Pack.hs  Rarity.hs  User.hs  Waifu.hs
src/Shinobu/Utils/: Calamity.hs  Checks.hs  DB.hs  Error.hs  JSON.hs  KeyStoreCommands.hs  Misc.hs  Parsers.hs  Streaming.hs  Types.hs
