cabal-version:      3.0
name:               shinobu-bot
version:            0.1.0.0
license:            AGPL-3.0-or-later
license-file:       LICENSE
extra-source-files: README.md

executable shinobu-bot
  hs-source-dirs:     src
  main-is:            Main.hs

  -- cabal-fmt: expand src -Main
  other-modules:
    Prelude
    Shinobu.Commands.BannedPatterns
    Shinobu.Commands.CallNotification
    Shinobu.Commands.CustomReactions
    Shinobu.Commands.ErrorHandling
    Shinobu.Commands.Misc
    Shinobu.Commands.Shop
    Shinobu.DB
    Shinobu.Effects.Cooldown
    Shinobu.Effects.IndexStore
    Shinobu.Effects.KeyStore
    Shinobu.Gacha
    Shinobu.Gacha.Character
    Shinobu.Gacha.DB
    Shinobu.Gacha.Economy
    Shinobu.Gacha.Embeds
    Shinobu.Gacha.Pack
    Shinobu.Gacha.Rarity
    Shinobu.Gacha.User
    Shinobu.Gacha.Waifu
    Shinobu.Types
    Shinobu.Util

  build-depends:
    , base                       >=4.14     && <5
    , calamity                   >=0.5.0.0
    , calamity-commands          >=0.4.0.0
    , colour                     >=2.3.6
    , data-default               >=0.7.1.1
    , data-flags                 >=0.0.3.4
    , di                         >=1.3
    , di-polysemy                >=0.2.0.0
    , errors                     >=2.3.0
    , mono-traversable           >=1.0.15.3
    , optics                     >=0.4.2
    , polysemy                   >=1.7
    , polysemy-plugin            >=0.4.3.0
    , polysemy-RandomFu          >=0.6
    , random                     >=1.2.1.1
    , random-fu                  >=0.3.0.0
    , regex                      >=1.1.0.1
    , relude                     >=1.0
    , sqlite-simple              >=0.4.18.0
    , sqlite-simple-interpolate  >=0.1
    , stm                        >=2.5.0.2
    , string-interpolate         >=0.3.1.2
    , text                       >=1.2.5.0
    , time                       >=1.11.1.1
    , witch                      >=1.0.0.2

  mixins:             base hiding (Prelude)
  default-extensions:
    NoCUSKs
    NoMonomorphismRestriction
    NoStarIsType
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDecls
    ExistentialQuantification
    ExtendedDefaultRules
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    IncoherentInstances
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -fspecialise-aggressively -flate-specialise
    -fplugin=Polysemy.Plugin -Wall -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wcompat -Widentities
    -Wredundant-constraints -fhide-source-paths -Wpartial-fields
    -fno-warn-unused-do-bind -fno-warn-type-defaults
    -fno-warn-missing-signatures -threaded -rtsopts
    "-with-rtsopts=-N -I0"

  default-language:   Haskell2010
